# IP-Task4

./: .gitignore  README.md
Project_IP-4/: CMakeLists.txt
Project_IP-4/program/: CMakeLists.txt
Project_IP-4/program/src/: main.cpp
